--- a/index.css
+++ b/index.css
@@ -5,7 +5,16 @@ body{
     align-items: flex-end;
 }
 
+.body{
+    position: absolute;
+    z-index: 1;
+    width: 100%;
+    height: 100%;
+}
+
 .flex{
+    position: relative;
+    z-index: 2;
     width: 100%;
     height: 70vh;
     display: flex;
@@ -15,10 +24,15 @@ body{
 .card{
     width: 20%;
     height: 100%;
-    margin-left: 5%;
     border:1px solid black;
     background-color: whitesmoke;
-    transition: 0.5s ease-in-out
+    transition: 0.5s ease-in-out;
+    -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 img{
