--- a/index.css
+++ b/index.css
@@ -3,6 +3,12 @@ body{
     height: 95vh;
     display: flex;
     align-items: flex-end;
+    overflow-x:hidden;
+    background: linear-gradient(to right,
+    rgba(20, 20, 20, 0) 70%,
+    rgba(20, 20, 20, 0.1) 80%,
+    rgba(20, 20, 20, 0.3) 
+    )
 }
 
 .body{
@@ -10,6 +16,7 @@ body{
     z-index: 1;
     width: 100%;
     height: 100%;
+    
 }
 
 .flex{
@@ -46,4 +53,6 @@ img{
 
 .width{
     width: 0%;
+    border:0;
+    font-size: 0;
 }
