--- a/index.css
+++ b/index.css
@@ -4,7 +4,19 @@ body{
     display: flex;
     align-items: flex-end;
     overflow-x:hidden;
+    transition: 0.5s ease-in-out;
+}
+
+.right{
     background: linear-gradient(to right,
+    rgba(20, 20, 20, 0) 70%,
+    rgba(20, 20, 20, 0.1) 80%,
+    rgba(20, 20, 20, 0.3) 
+    )
+}
+
+.left{
+    background: linear-gradient(to left,
     rgba(20, 20, 20, 0) 70%,
     rgba(20, 20, 20, 0.1) 80%,
     rgba(20, 20, 20, 0.3) 
@@ -23,7 +35,7 @@ body{
     position: relative;
     z-index: 2;
     width: 100%;
-    height: 70vh;
+    height: 60vh;
     display: flex;
     justify-content: space-around;
 }
