--- a/index.css
+++ b/index.css
@@ -1,10 +1,11 @@
 body{
     width: 100%;
-    height: 95vh;
+    height: 100vh;
     display: flex;
     align-items: flex-end;
     overflow-x:hidden;
-    
+    overflow-y: hidden;
+    margin: 0;
 }
 
 .right{
@@ -25,15 +26,17 @@ body{
 
 .body{
     position: absolute;
-    z-index: 1;
+    z-index: 2;
     width: 100%;
     height: 100%;
+    font-size: 3rem;
+    color: whitesmoke;
     transition: 0.5s ease-in-out;
 }
 
 .flex{
     position: relative;
-    z-index: 2;
+    z-index: 1;
     width: 100%;
     height: 60vh;
     display: flex;
@@ -42,7 +45,7 @@ body{
 
 .card{
     width: 20%;
-    height: 100%;
+    height: 99%;
     border:1px solid black;
     background-color: whitesmoke;
     transition: 0.5s ease-in-out;
