--- a/index.css
+++ b/index.css
@@ -40,7 +40,7 @@ body{
     width: 100%;
     height: 40vh;
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
 }
 
 .card{
@@ -71,4 +71,8 @@ img{
     width: 0%;
     border:0;
     font-size: 0;
+}
+
+.select{
+    transform: scaleY(1.15);
 }
