--- a/index.css
+++ b/index.css
@@ -39,6 +39,7 @@ body{
     z-index: 1;
     width: 100%;
     height: 40vh;
+    transition: 0.5s ease-in-out;
     display: flex;
     
 }
@@ -75,4 +76,14 @@ img{
 
 .select{
     transform: scaleY(1.15);
+}
+
+.pick{
+    width: 100%;
+    height: 100vh;
+}
+
+.margin{
+    
+    margin-bottom: 400vh;
 }
